--- a/style.css
+++ b/style.css
@@ -389,6 +389,7 @@ html, body {
 
 .menu-desc1 {
   flex-shrink: 0;
+  margin-left: 35px;
 }
 
 .menu-desc1 h1 {
@@ -436,13 +437,13 @@ html, body {
   align-items: center;
   /* margin-left: -15px; */
   /* margin-le */
-  margin-right: 50px;
+  margin-right: 100px;
 }
 
 .circles-lines-wrapper {
   display: flex;
   align-items: center;
-  height: 225px;
+  height: 190px;
 }
 
 .lines {
@@ -460,7 +461,7 @@ html, body {
 .circles {
   display: flex;
   flex-direction: column;
-  gap: 100px;
+  gap: 50px;
   margin-left: 10px;
 }
 
@@ -831,7 +832,10 @@ html, body {
   }
 
   .menu-desc1 {
-    margin: auto;
+    /* width: 100%; */
+    /* margin: auto; */
+    margin-left: 0;
+    /* margin-right: auto; */
   }
 }
 
